--- a/SpringBootGenerator/SpringBootGeneratorCli/SpringBootGeneratorCli.csproj
+++ b/SpringBootGenerator/SpringBootGeneratorCli/SpringBootGeneratorCli.csproj
@@ -9,6 +9,7 @@
     <DelaySign>true</DelaySign>
     <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
     <EnforceCodeStyleInBuild>false</EnforceCodeStyleInBuild>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,6 +20,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants />
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SpringBootGenerator\SpringBootGenerator.csproj" />
