--- a/SpringBootGenerator/SpringBootGenerator/Templates/Repository.template
+++ b/SpringBootGenerator/SpringBootGenerator/Templates/Repository.template
@@ -1,8 +1,10 @@
-﻿
-import [{package}].models.~;
+﻿package [{package}].repositories;
+
+import [{package}].models.[{entity}].[{entity}];
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 
 @Repository
-public interface ~Repository extends JpaRepository<~, Integer> {
+public interface [{entity}]Repository extends JpaRepository<[{entity}], Integer> {
+
 }
